# libfastdl

./: .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  fastdl.c  fastdl.h
test/: CMakeLists.txt  dl_test.c  fastdl_test.c
